--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/mypic1.jpg" />
+    <link rel="icon" type="image/jpg" href="https://i.ibb.co/8mPyfKY/mypic.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ashish Kumar Sahu || Portfolio</title>
   </head>
