--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/jpg" href="https://i.ibb.co/8mPyfKY/mypic.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ashish Kumar Sahu || Portfolio</title>
+    <!-- Elfsight AI Chatbot | Untitled AI Chatbot -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-e089d95a-0923-4014-a51f-a35fe2273ac5" data-elfsight-app-lazy></div>
   </head>
   <body>
     <div id="root"></div>
